# aurora-dsql-connectors

.github/workflows/: php-pdo-pgsql-ci.yml  ruby-pg-ci.yml  ruby-pg-release.yml  slack-pr-notify.yml
go/pgx/: README.md
java/jdbc/: README.md  build.gradle.kts
java/jdbc/examples/pgjdbc/: README.md  build.gradle.kts
java/jdbc/examples/pgjdbc/src/main/java/software/amazon/dsql/examples/: ExamplePreferred.java
java/jdbc/examples/pgjdbc/src/main/java/software/amazon/dsql/examples/alternatives/: README.md
java/jdbc/examples/pgjdbc/src/main/java/software/amazon/dsql/examples/alternatives/no_connection_pool/: ExampleWithNoConnectionPool.java
java/jdbc/integration-tests/: build.gradle.kts
java/jdbc/integration-tests/src/test/java/software/amazon/dsql/jdbc/integration/: OCCRetryIntegrationTest.java
java/jdbc/src/main/java/software/amazon/dsql/jdbc/: OCCRetry.java  OCCRetryConfig.java  OCCTransactionRunner.java  VoidTransactionCallback.java
java/jdbc/src/test/java/software/amazon/dsql/jdbc/: OCCRetryConfigTest.java  OCCRetryTest.java  OCCTransactionRunnerTest.java
node/node-postgres/: CHANGELOG.md  package-lock.json
node/node-postgres/example/: package-lock.json  package.json
node/postgres-js/: CHANGELOG.md  package-lock.json
node/postgres-js/example/src/alternatives/websocket/: package-lock.json  package.json
python/connector/: README.md  pyproject.toml
python/connector/aurora_dsql_asyncpg/: __init__.py  pool.py  transaction.py
python/connector/aurora_dsql_occ_retry/: __init__.py
python/connector/aurora_dsql_psycopg/: __init__.py  pool.py  transaction.py
python/connector/aurora_dsql_psycopg2/: __init__.py  pool.py  transaction.py
python/connector/dsql_core/: occ_retry.py
python/connector/examples/asyncpg/src/: example_preferred.py
python/connector/examples/asyncpg/src/alternatives/pool/: example_with_nonconcurrent_connection_pool.py
python/connector/examples/psycopg/src/: example_preferred.py
python/connector/examples/psycopg/src/alternatives/pool/: example_with_async_connection_pool.py  example_with_nonconcurrent_connection_pool.py
python/connector/examples/psycopg2/src/: example_preferred.py
python/connector/examples/psycopg2/src/alternatives/pool/: example_with_nonconcurrent_connection_pool.py
python/connector/tests/integration/: test_integration_asyncpg_pool.py  test_integration_psycopg2.py  test_integration_psycopg_pool.py
python/connector/tests/unit/: test_occ_retry.py
ruby/pg/: README.md
