[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "aurora-dsql-python-connector"
dynamic = ["version"]
description = "A connector that integrates IAM Authentication for connecting Python applications to Amazon Aurora DSQL clusters"
readme = "README.md"
license = "Apache-2.0"
authors = [
    {name = "Amazon Web Services", email = "aws-aurora-dsql-feedback@amazon.com"}
]
requires-python = ">=3.10"

classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]

dependencies = [
    "boto3>=1.35.74",
]

[project.optional-dependencies]
psycopg = [
   "psycopg[binary]>=3.1.0",
   "psycopg-pool>=3.2.6",
]

psycopg2 = [
   "psycopg2-binary>=2.9.0",
]

asyncpg = [
   "asyncpg>=0.30.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=1.2.0",
    "python-dotenv>=1.0.0",
    "hatch-vcs",
    "mypy>=1.0.0",
    "ruff",
    "pre-commit",
]
psycopg = [
    "psycopg[binary]>=3.1.0",
    "psycopg-pool>=3.2.6",
]
psycopg2 = [
    "psycopg2-binary>=2.9.0",
]
asyncpg = [
    "asyncpg>=0.30.0",
]

[tool.uv]
default-groups = ["dev", "psycopg", "psycopg2", "asyncpg"]

[project.urls]
Homepage = "https://github.com/awslabs/aurora-dsql-connectors/tree/main/python/connector"
Repository = "https://github.com/awslabs/aurora-dsql-connectors"
Documentation = "https://github.com/awslabs/aurora-dsql-connectors/tree/main/python/connector"
"Bug Tracker" = "https://github.com/awslabs/aurora-dsql-connectors/issues"

[tool.hatch.version]
source = "vcs"
tag-pattern = "python/connector/v(?P<version>.*)"
raw-options = { root = "../..", git_describe_command = ["git", "describe", "--tags", "--match", "python/connector/v*"] }

[tool.hatch.build.hooks.vcs]
version-file = "dsql_core/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["aurora_dsql_asyncpg", "aurora_dsql_psycopg", "aurora_dsql_psycopg2", "dsql_core"]

[tool.ruff]
line-length = 100
exclude = ["*/_version.py"]

[tool.ruff.lint]
extend-select = [
    "E",      # https://docs.astral.sh/ruff/rules/#error-e
    "F",      # https://docs.astral.sh/ruff/rules/#pyflakes-f
    "FA",     # https://docs.astral.sh/ruff/rules/#flake8-future-annotations-fa
    "I",      # https://docs.astral.sh/ruff/rules/#isort-i
    "RUF100", # https://docs.astral.sh/ruff/rules/#ruff-specific-rules-ruf
    "UP",     # https://docs.astral.sh/ruff/rules/#pyupgrade-up
    "W",      # https://docs.astral.sh/ruff/rules/#warning-w
]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
explicit_package_bases = true
exclude = [
    "build/",
    "\\.venv/",
    "examples/.*/\\.venv/",
]
